cmake_minimum_required(VERSION 2.6)
project(hacker_rank_cpp_tutorial)
enable_testing()
include(CTest)
find_package(Boost 1.61.0 COMPONENTS unit_test_framework REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
file(GLOB TEST_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} test/*.cpp)
#run through each source
foreach(testSrc ${TEST_SRCS})
    get_filename_component(testName ${testSrc} NAME_WE)
    add_executable(${testName} ${testSrc})
    target_link_libraries(${testName} ${Boost_LIBRARIES})
    set_target_properties(${testName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test_bin)
    add_test(NAME ${testName} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test_bin COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test_bin/${testName})
endforeach(testSrc)
add_executable(attribute_parser strings/attribute_parser.cpp)
